manifests_app2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-app2-service
  namespace: simple-app2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: simple-go
